--- a/funnel/index.html
+++ b/funnel/index.html
@@ -21,7 +21,7 @@
                 </div>
 
                 <div class="textfield">
-                    <label for="cliques" class="title">*Cliques</label>
+                    <label for="cliques" class="title">Cliques</label>
                     <input class="input cliques" name="cliques" placeholder="Cliques">
                 </div>
 
